# pydantic-ai-langsmith-otel

./: .env.example  .gitignore  README.md  debug_404.py  docker-compose.yml  main.py  otel-collector-config.yaml  otel_config.py  pyproject.toml  test_endpoints.py  test_otel.py
